@@ -165,6 +165,7 @@ Version 1.11.0-svn:
    * Added: A character limit width constrain for a text
    * Stop showing a unit's potential moves before moving in a move & attack,
      rather than after (more consistent with regular movement)
+   * Changed: Made the id for a tooltip and helptip mandatory.
  * Whiteboard:
    * Fixed bug #19626: segfaults on window resize
    * Fixed bug #19369: Using planning mode can cause losing ability to move my units
